sgw.tf

resource "aws_security_group" "sgw_allow" {
  name        = "sgw_allow"
  description = "Allow inbound traffic"
  vpc_id = var.vpc_id

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.swg_allow
    self = true
  }

   ingress {
    from_port = 445
    to_port   = 445
    protocol  = "tcp"
    cidr_blocks = var.swg_allow
    description = "Remote desk login"
  }

   ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"
    cidr_blocks = var.swg_allow
    description = "https"
  }

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = var.swg_allow
    description = "http"
  }

  ingress {
    from_port   = "-1"
    to_port     = "-1"
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sgw_allow", created_by = "terraform"
  }
}

output "sg_ssh_id" {
  description = "SG_SSH ID"
  value = aws_security_group.sgw_allow.id
}

resource "aws_instance" "gw_instance" {
  ami                         = var.sgw_ami
  instance_type               = var.sgw_mtype
  associate_public_ip_address = true
  subnet_id                   = "subnet-090c4e0411c0d81e1"
  vpc_security_group_ids = ["sg-0345ddfc7bf0a9b47"]
  tags = {
    created_by = "terraform"
  }
}

output "gw_instance_id" {
  value = aws_instance.gw_instance.id
}

resource "aws_ebs_volume" "sgw_ebs" {
  availability_zone = "us-east-1a"
  size              = var.sgw_ebs
  type              = var.ebs_type
  encrypted         = false
  tags = {
    created_by = "terraform"
  }
}

resource "aws_volume_attachment" "sgw_attach" {
  device_name  = "/dev/sdh"
  volume_id    = aws_ebs_volume.sgw_ebs.id
  instance_id  = aws_instance.gw_instance.id
  force_detach = false
}

# count to create multiple eip if necessary and associated with respective instances
resource "aws_eip" "sgw_eip" {
  count = 1
  instance = aws_instance.gw_instance[count.index].id
  vpc      = true
}

output "public_ip" {
  value = aws_eip.sgw_eip.[count.index]
}

resource "aws_storagegateway_gateway" "file_sgw" {
  #gateway_ip_address = "44.192.120.87"
  gateway_ip_address = aws_eip.sgw_eip.public_ip
  gateway_name       = "test_gw"
  gateway_timezone   = "GMT"
  gateway_type       = "FILE_S3"
}

data "aws_storagegateway_local_disk" "sgw_ebs" {
  disk_node   = "/dev/sdh"
  gateway_arn = aws_storagegateway_gateway.file_sgw.arn
}

resource "aws_storagegateway_cache" "gw_cache" {
  disk_id     = data.aws_storagegateway_local_disk.sgw_ebs.disk_id
  gateway_arn = aws_storagegateway_gateway.file_sgw.arn
}
